@@ -443,7 +443,19 @@ enum
     ID_STS_VSPLITBUTTON,
     ID_STS_HSPLITBUTTON,
 
-    ID_STE_TOOLBAR_FIND_COMBO,
+    ID_STE_TOOLBAR_FIND_CTRL,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU0, // The menu items attached to the wxSearchCtrl
+    ID_STE_TOOLBAR_FIND_CTRL_MENU1,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU2,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU3,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU4,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU5,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU6,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU7,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU8,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU9,
+    ID_STE_TOOLBAR_FIND_CTRL_MENU__LAST, // count = ID_STE_TOOLBAR_FIND_CTRL_MENU__LAST - ID_STE_TOOLBAR_FIND_CTRL_MENU0
+
     ID_STEDLG_PREF_NOTEBOOK,    // id of the notebook in the pref dialog
 
     // ------------------------------------------------------------------------
